# batuthzcode-file-inspector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  analyzer.py  cli.py  history_store.py  main.py  pyproject.toml  reporting.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: thzcodespair-inspector.desktop
docs/: ARCHITECTURE.md
rules/: static_rules.yar
scripts/: build_linux.sh
tests/: test_analyzer.py  test_cli.py  test_history.py  test_reporting.py  yara-fixture.txt
